fixed the image

--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -63,7 +63,7 @@
 <body>
     <h1> SweetTreats Bakery</h1>
     <div class="center">
-        <img src="/Images/Logo Company.png"
+        <img src="/WEBSITE HTML/Images/Logo Company.png"
             alt="SweetTreats Bakery logo featuring a smiling cupcake with pink frosting and sprinkles, set against a pastel background with the text SweetTreats Bakery in playful script, conveying a cheerful and welcoming atmosphere"
             width="250" height="250">
     </div>
