--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -1,17 +1,57 @@
 <!DOCTYPE HTML>
 <html lang="en">
 
-<header>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="Sweet.css">
-</header>
+</head>
 
-<Main>
+<body>
+    <header>
+        <img src="/WEBSITE HTML/Images/Logo Company.png">
+    </header>
 
+    <Section>
+        <p><span class="good">SweetTreats</span></p>
+        <p><span class="good"> "Bite into Happiness” </span></p>
+        <p>At Sweetreats, we believe every day deserves a little sweetness.<br> Our website is your go-to place for
+            freshly
+            baked pastries, made with care and the finest ingredients.<br> From golden croissants to indulgent
+            cupcakes,
+            each treat is crafted to bring joy to your taste buds. <br>Whether you're craving a quick snack or
+            planning
+            something special, Sweetreats has the perfect pastry waiting for you.</p>
+        <p> <span class="good">Why Choose Sweetreats?</span><br>
+            Freshly baked every day – Our pastries come straight from the oven to your plate.
+            Perfect for every celebration – From birthdays to weddings, our custom cakes are designed to make your
+            moments unforgettable.
+            Simple & convenient – Browse our menu, place your order online, and enjoy your favorite treats
+            hassle-free.
+            We’re more than just a bakery — we’re a community of sweet lovers who believe in spreading happiness,
+            one bite at a time.</p>
+        <P>Sweetreats Bakery
+            45 Belmont Road
+            Rondebosch, Cape Town
+            7700, South Africa</P>
+        <p> Phone: +27 21 555 2345
+            📧 Email: info@sweetreats.co.za</p>
 
+    </Section>
+    <navigation>
+        <a href="Menu.html">
+            <button>Menu</button>
+        </a>
+        <a href="AboutUS.html">
+            <button>About Us</button>
+        </a>
+        <a href="CustomCake.html">
+            <button>Custom Cake</button>
+        </a>
+        <a href="Gallery.html">
+            <button>Gallery</button>
+        </a>
+    </navigation>
 
-
-    
-</Main>
+</body>
