--- a/Menu.html
+++ b/Menu.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="Menu.css">
 </head>
+
 <body>
-<Header>
+    <Header>
         <Banner class="banner">
             <a href="SweetTreatsHomepage.html">
-            <img src="Images/Logo Company.png" width=130 height=130>
+                <img src="Images/Logo Company.png" width=130 height=130>
             </a>
             <a href="Menu.html">
                 <p>Menu</p>
@@ -26,6 +27,17 @@
                 <p>Gallery</p>
             </a>
         </Banner>
-
-
-</body>
+    </Header>
+    <main>
+        <p> <span class="good">Menu Page</span></p>
+        <p>Welcome to the Sweetreats Menu — your gateway to a world of irresistible flavors. Our menu is carefully
+            designed to satisfy every craving, whether you want something light and buttery, rich and chocolatey, or
+            fruity and refreshing.</p>
+    </main>
+    <footer>
+        <p class="good">Pastries</p>
+        <Section class="Menu">
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/fresh-french-croissant-table.jpg" width="200"
+                    height="200">Croisant</p>
+        </Section>
+    </footer>
