--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -14,7 +14,7 @@
     </header>
 
     <Section>
-        <p><span class="good">SweetTreats</span></p>
+        <p><span class="good">Sweetreats</span></p>
         <p><span class="good"> "Bite into Happiness” </span></p>
         <p>At Sweetreats, we believe every day deserves a little sweetness.<br> Our website is your go-to place for
             freshly
@@ -23,6 +23,8 @@
             each treat is crafted to bring joy to your taste buds. <br>Whether you're craving a quick snack or
             planning
             something special, Sweetreats has the perfect pastry waiting for you.</p>
+    </Section>
+    <Section>
         <p> <span class="good">Why Choose Sweetreats?</span><br>
             Freshly baked every day – Our pastries come straight from the oven to your plate.
             Perfect for every celebration – From birthdays to weddings, our custom cakes are designed to make your
