--- a/AboutUS.html
+++ b/AboutUS.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!--Navigation Buttons-->
     <Banner class="banner">
         <a href="SweetTreatsHomepage.html">
             <img src="Images/Logo Company.png" width=130 height=130>
@@ -26,6 +27,7 @@
             <p>Gallery</p>
         </a>
     </Banner>
+    <!--Story-->
     <p class="good">Where it Began?</p>
     <Section>
         <p>Sweetreats began as a humble family kitchen, where the simple joy of baking quickly grew into a shared
@@ -44,6 +46,7 @@
             every bite feel like home.</p>
     </Section>
     <footer>
+        <!--Images of the company in the past-->
         <img src="/WEBSITE HTML/Images/Aboutus/medium-shot-brazilian-family-cooking-tasty-desserts.jpg" width="500"
             height="700"><img src="/WEBSITE HTML/Images/Aboutus/screenshorthere.png" width="700" height="500">
     </footer>
