--- a/Gallery.html
+++ b/Gallery.html
@@ -10,6 +10,7 @@
 
 <body>
     <Header>
+        <!--Navigation Buttons-->
         <Banner class="banner">
             <a href="SweetTreatsHomepage.html">
                 <img src="Images/Logo Company.png" width=130 height=130>
@@ -30,6 +31,7 @@
     </Header>
     <section>
         <p class="good">Gallery</p>
+        <!--Brief Introduction -->
         <p>Welcome to the Sweetreats Gallery, where every picture tells a delicious story. Take a look at some of our
             customer favorites and custom creations, lovingly made for birthdays, weddings, anniversaries, and everyday
             indulgence.
@@ -38,4 +40,42 @@
             Stunning custom cake designs made for real clients
             Seasonal specials and holiday-themed treats</p>
     </section>
+    <Section class="Menu">
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/fresh-french-croissant-table.jpg" width="200" height="200">
+        </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Donut.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/cinnamon rolls.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Tea.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Muffins.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pie.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Strawberry-pie.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pretsle.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/chocolate ball.jpg" width="200" height="200">
+        </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Crepe.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Brownies.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/SandWhich.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/sprinkle cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Chocolate Cake.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Fries.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Oreo.jpg" width="200" height="200"> </p>
+
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Makroon.jpg" width="200" height="200"></p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Salad.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Banana bread.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Strawberry Makroon.jpg" width="200" height="200">
+        </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Christmas Biscuit.jpg" width="200" height="200"> </p>
+    </Section>
+
+
+
 </body>
