--- a/Menu.html
+++ b/Menu.html
@@ -10,6 +10,7 @@
 
 <body>
     <Header>
+        <!--Navigation Buttons-->
         <Banner class="banner">
             <a href="SweetTreatsHomepage.html">
                 <img src="Images/Logo Company.png" width=130 height=130>
@@ -30,14 +31,84 @@
     </Header>
     <main>
         <p> <span class="good">Menu Page</span></p>
+        <!--Brief Introduction-->
         <p>Welcome to the Sweetreats Menu — your gateway to a world of irresistible flavors. Our menu is carefully
             designed to satisfy every craving, whether you want something light and buttery, rich and chocolatey, or
-            fruity and refreshing.</p>
+            fruity and refreshing.Whether you’re starting your day with a buttery croissant, treating yourself to a
+            fudgy brownie, or ordering a custom cake for a milestone celebration, you’ll find something here to satisfy
+            your cravings. Each product is baked fresh daily using only the finest ingredients, because we believe great
+            taste begins with quality.
+
+            Our menu is divided into categories to make it easy for you to explore:
+
+            Pastries for a light, flaky start to your morning
+
+            Cakes for celebrations both big and small
+
+            Cookies & Treats for snacks that delight
+
+            Custom Orders for those unforgettable moments that deserve something truly unique
+
+            Take your time, browse through our delicious offerings, and imagine the sweetness waiting for you at
+            Sweetreats.</p>
     </main>
     <footer>
+        <!--First Category-->
         <p class="good">Pastries</p>
         <Section class="Menu">
             <p class="box"><img src="/WEBSITE HTML/Images/Menu/fresh-french-croissant-table.jpg" width="200"
                     height="200">Croisant</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Donut.jpg" width="200" height="200">Donut</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/cinnamon rolls.jpg" width="200" height="200">Cinnamon
+                Roll</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Tea.jpg" width="200" height="200">Tea</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Muffins.jpg" width="200" height="200">Muffin</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pie.jpg" width="200" height="200">Pie</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Strawberry-pie.jpg" width="200"
+                    height="200">Strawberry-pie</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pretsle.jpg" width="200" height="200">Pretsles</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/chocolate ball.jpg" width="200" height="200">Chocolate
+                Ball</p>
+
+        </Section>
+        <!--Second Category-->
+        <p class="good">Cakes</p>
+        <Section class="Menu">
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Crepe.jpg" width="200" height="200">Crepe</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Brownies.jpg" width="200" height="200">Brownies</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> Pancakes
+            </p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200"
+                    height="200">Blueberry Pancakes</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/SandWhich.jpg" width="200" height="200">SandWhich
+            </p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200">Vanilla
+                Cake</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200">Velvet
+                Cake</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/sprinkle cake.jpg" width="200"
+                    height="200">Sprinkle cake </p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Chocolate Cake.jpg" width="200"
+                    height="200">Chocolate Cake</p>
+        </Section>
+        <!--Thrid Category-->
+        <p class="good">Cookies</p>
+        <Section class="Menu">
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Oreo.jpg" width="200" height="200">Oreo</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Makroon.jpg" width="200" height="200">Makroon</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Salad.jpg" width="200" height="200"> Salad</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Banana bread.jpg" width="200" height="200">Banana Bread
+            </p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Strawberry Makroon.jpg" width="200"
+                    height="200">Strawberry Makroon</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200">Onion
+                Rings</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200"
+                    height="200">Vanilla Biscuit</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200">Biscuit
+                Jar</p>
+            <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200"
+                    height="200">Biscuit Ice Cream</p>
+
         </Section>
     </footer>
