--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -10,12 +10,15 @@
 
 <body>
     <header>
+        <!--Image of the Company logo-->
         <img src="/WEBSITE HTML/Images/Logo Company.png">
     </header>
 
     <Section>
         <p><span class="good">Sweetreats</span></p>
+        <!--Company's Slogan-->
         <p><span class="good"> "Bite into Happiness” </span></p>
+        <!-- brief Introduction-->
         <p>At Sweetreats, we believe every day deserves a little sweetness.<br> Our website is your go-to place for
             freshly
             baked pastries, made with care and the finest ingredients.<br> From golden croissants to indulgent
@@ -25,6 +28,7 @@
             something special, Sweetreats has the perfect pastry waiting for you.</p>
     </Section>
     <Section>
+        <!--More About Sweetreats-->
         <p> <span class="good">Why Choose Sweetreats?</span><br>
             Freshly baked every day – Our pastries come straight from the oven to your plate.
             Perfect for every celebration – From birthdays to weddings, our custom cakes are designed to make your
@@ -33,6 +37,7 @@
             hassle-free.
             We’re more than just a bakery — we’re a community of sweet lovers who believe in spreading happiness,
             one bite at a time.</p>
+        <!--Contact Details-->
         <P>Sweetreats Bakery
             45 Belmont Road
             Rondebosch, Cape Town
@@ -41,6 +46,7 @@
             📧 Email: info@sweetreats.co.za</p>
 
     </Section>
+    <!--Navigation Button to travel to other Pages-->
     <navigation>
         <a href="Menu.html">
             <button>Menu</button>
