--- a/AboutUS.html
+++ b/AboutUS.html
@@ -10,7 +10,7 @@
 
 <body>
     <!--Navigation Buttons-->
-    <Banner class="banner">
+    <Banner class="banner"><!-- Banner Code from (Codeninja(Youtube))-->
         <a href="SweetTreatsHomepage.html">
             <img src="Images/Logo Company.png" width=130 height=130>
         </a>
