--- a/Menu.html
+++ b/Menu.html
@@ -11,7 +11,7 @@
 <body>
     <Header>
         <!--Navigation Buttons-->
-        <Banner class="banner">
+        <Banner class="banner"><!-- Banner Code from (Codeninja(Youtube))-->
             <a href="SweetTreatsHomepage.html">
                 <img src="Images/Logo Company.png" width=130 height=130>
             </a>
