--- a/Gallery.html
+++ b/Gallery.html
@@ -29,7 +29,7 @@
             </a>
         </Banner>
     </Header>
-    <section>
+    <main>
         <p class="good">Gallery</p>
         <!--Brief Introduction -->
         <p>Welcome to the Sweetreats Gallery, where every picture tells a delicious story. Take a look at some of our
@@ -39,7 +39,7 @@
             Photos of our most popular pastries and cakes
             Stunning custom cake designs made for real clients
             Seasonal specials and holiday-themed treats</p>
-    </section>
+    </main>
     <Section class="Menu">
         <p class="box"><img src="/WEBSITE HTML/Images/Menu/fresh-french-croissant-table.jpg" width="200" height="200">
         </p>
