--- a/CustomCake.html
+++ b/CustomCake.html
@@ -28,31 +28,37 @@
                 <p>Gallery</p>
             </a>
         </Banner>
-        <!--Brief Intro-->
-        <p class="good">Celebrate with Sweetreats</p>
-        <p>Every celebration deserves a show-stopping centerpiece. That’s why we offer custom cakes for every occasion —
-            birthdays, weddings, graduations, corporate events, and more. With our easy-to-use Custom Cake Maker, you
-            can design your cake exactly the way you imagine it. Choose the flavors, decorations, colors, and theme, and
-            let our bakers bring your vision to life.
-
-            We don’t just deliver cakes — we deliver smiles, memories, and unforgettable moments.</p>
+        <main>
+            <!--Brief Intro-->
+            <p class="good">Celebrate with Sweetreats</p>
+            <p>Every celebration deserves a show-stopping centerpiece. That’s why we offer custom cakes for every
+                occasion —
+                birthdays, weddings, graduations, corporate events, and more. With our easy-to-use Custom Cake Maker,
+                you
+                can design your cake exactly the way you imagine it. Choose the flavors, decorations, colors, and theme,
+                and
+                let our bakers bring your vision to life.e don’t just deliver cakes — we deliver smiles, memories, and
+                unforgettable moments</p>
+        </main>
         <!--Recent Review-->
-        <p class="good">Reviews</p>
-        <p>Customer Love
+        <footer>
+            <p class="good">Reviews</p>
+            <p>Customer Love
 
-            “The best bakery in Cape Town! Their croissants taste just like Paris.”
-            – <span class="good">Thandi, loyal customer</span><br>
+                “The best bakery in Cape Town! Their croissants taste just like Paris.”
+                – <span class="good">Thandi, loyal customer</span><br>
 
-            “I ordered a custom cake for my daughter’s birthday, and everyone at the party was blown away. Thank you,
-            Sweetreats!”
-            – <span class="good">Ayesha, happy parent</span><br>
+                “I ordered a custom cake for my daughter’s birthday, and everyone at the party was blown away. Thank
+                you,
+                Sweetreats!”
+                – <span class="good">Ayesha, happy parent</span><br>
 
-            “I stop by every Friday for their chocolate muffins — they never disappoint.”<br>
-            – <span class="good">Sipho, regular visitor</span></p>
-        <!--Online Form For Custom Cake-->
-        <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLScz-IayWbCGQGkH_9KBkzURhrKcQqZI2OUsii2f4e-0fG-FDw/viewform?embedded=true"
-            width="640" height="2333" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
+                “I stop by every Friday for their chocolate muffins — they never disappoint.”<br>
+                – <span class="good">Sipho, regular visitor</span></p>
+            <!--Online Form For Custom Cake-->
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLScz-IayWbCGQGkH_9KBkzURhrKcQqZI2OUsii2f4e-0fG-FDw/viewform?embedded=true"
+                width="640" height="2333" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </footer>
     </header>
 </body>
