Interactive Map on the HomePage

--- a/AboutUS.html
+++ b/AboutUS.html
@@ -47,8 +47,8 @@
     </Section>
     <footer>
         <!--Images of the company in the past-->
-        <img src="/WEBSITE HTML/Images/Aboutus/medium-shot-brazilian-family-cooking-tasty-desserts.jpg" width="500"
-            height="700"><img src="/WEBSITE HTML/Images/Aboutus/screenshorthere.png" width="700" height="500">
+        <img src="./Images/Aboutus/medium-shot-brazilian-family-cooking-tasty-desserts.jpg" width="500"
+            height="700"><img src="./Images/Aboutus/screenshorthere.png" width="700" height="500">
     </footer>
 
 
