--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <!--Image of the Company logo-->
-        <img src="/WEBSITE HTML/Images/Logo Company.png">
+        <img src="./Images/Logo Company.png" alt="Company Logo">
     </header>
 
     <Section>
@@ -38,10 +38,15 @@
             We’re more than just a bakery — we’re a community of sweet lovers who believe in spreading happiness,
             one bite at a time.</p>
         <!--Contact Details-->
-        <P>Sweetreats Bakery
-            45 Belmont Road
-            Rondebosch, Cape Town
-            7700, South Africa</P>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.605371518797!2d18.481537975020963!3d-33.97698122466909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc432e62758c19%3A0xe35ae1de106f915b!2sNice%20&#39;N%20Spicy!5e0!3m2!1sen!2sza!4v1761776432432!5m2!1sen!2sza"
+            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <p>40 Belvedere Road
+            Claremont
+            Cape Town, 7708
+            South Africa</p>
         <p> Phone: +27 21 555 2345
             📧 Email: info@sweetreats.co.za</p>
 
