--- a/Gallery.html
+++ b/Gallery.html
@@ -41,39 +41,39 @@
             Seasonal specials and holiday-themed treats</p>
     </main>
     <Section class="Menu">
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/fresh-french-croissant-table.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/fresh-french-croissant-table.jpg" width="200" height="200">
         </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Donut.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/cinnamon rolls.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Tea.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Muffins.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pie.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Strawberry-pie.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Pretsle.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/chocolate ball.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/Donut.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/cinnamon rolls.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Tea.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Muffins.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Pie.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Strawberry-pie.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Pretsle.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/chocolate ball.jpg" width="200" height="200">
         </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Crepe.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Brownies.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/SandWhich.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/sprinkle cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cakes/Chocolate Cake.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Fries.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Oreo.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Crepe.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Brownies.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/SandWhich.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/sprinkle cake.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Chocolate Cake.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cookies/Fries.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cookies/Oreo.jpg" width="200" height="200"> </p>
 
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Makroon.jpg" width="200" height="200"></p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Salad.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Banana bread.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Strawberry Makroon.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/Cookies/Makroon.jpg" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cookies/Salad.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Banana bread.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Strawberry Makroon.jpg" width="200" height="200">
         </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="/WEBSITE HTML/Images/Menu/Cookies/Christmas Biscuit.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Christmas Biscuit.jpg" width="200" height="200"> </p>
     </Section>
 
 
