Meta Tags Added

--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link rel="stylesheet" href="Sweet.css">
+    <meta name="Keywords" content="Food,Bakery,Sweets,pastries,Sweetreats," />
+    <meta name="description"
+        content="Bite into happiness, Sweetreats brings you the finest homemade desserts, candies, and baked delights made with love and the freshest ingredients. Perfect for any occasion — from birthdays to everyday treats!" />
+    <meta name="author" content="BADIANYA MUTOMBO BLESS" />
 </head>
 
 <body>
@@ -15,6 +19,7 @@
     </header>
 
     <Section>
+
         <p><span class="good">Sweetreats</span></p>
         <!--Company's Slogan-->
         <p><span class="good"> "Bite into Happiness” </span></p>
