--- a/Gallery.html
+++ b/Gallery.html
@@ -27,6 +27,9 @@
             <a href="Gallery.html">
                 <p>Gallery</p>
             </a>
+            <a href="Contact.html">
+                <p>Contact Us</p>
+            </a>
         </Banner>
     </Header>
     <main>
