Added Alt To all images

--- a/Contact.html
+++ b/Contact.html
@@ -56,8 +56,8 @@
     <footer>
         <form method="POST" action="https://formsubmit.co/blessblessing2007@gmail.com">
             <input class="innput" type="text" name="name" placeholder="Enter Your Name" required />
-            <input class="innput" type="email" name="email" placeholder="Enter Your Email " required>
-            <input class="message" type="text " name="Message" placeholder="Enter Message" required />
+            <input class="innput" type="email" name="email" placeholder="Enter Your Email" required />
+            <textarea class="message" name="Message" placeholder="Enter Message" required></textarea>
             <button class="button" type="submit">Send</button>
         </form>
     </footer>
