--- a/Menu.html
+++ b/Menu.html
@@ -65,50 +65,66 @@
             <p class="box"><img src="./Images/Menu/cinnamon rolls.jpg" alt="cinnamon roll" width="200"
                     height="200">Cinnamon
                 Roll</p>
-            <p class="box"><img src="./Images/Menu/Tea.jpg" width="200" height="200">Tea</p>
-            <p class="box"><img src="./Images/Menu/Muffins.jpg" width="200" height="200">Muffin</p>
-            <p class="box"><img src="./Images/Menu/Pie.jpg" width="200" height="200">Pie</p>
-            <p class="box"><img src="./Images/Menu/Strawberry-pie.jpg" width="200" height="200">Strawberry-pie</p>
-            <p class="box"><img src="./Images/Menu/Pretsle.jpg" width="200" height="200">Pretsles</p>
-            <p class="box"><img src="./Images/Menu/chocolate ball.jpg" width="200" height="200">Chocolate
+            <p class="box"><img src="./Images/Menu/Tea.jpg" alt="Tea" width="200" height="200">Tea</p>
+            <p class="box"><img src="./Images/Menu/Muffins.jpg" alt="Muffin " width="200" height="200">Muffin</p>
+            <p class="box"><img src="./Images/Menu/Pie.jpg" alt="Pie " width="200" height="200">Pie</p>
+            <p class="box"><img src="./Images/Menu/Strawberry-pie.jpg" alt="Strawberry" width="200"
+                    height="200">Strawberry-pie</p>
+            <p class="box"><img src="./Images/Menu/Pretsle.jpg" alt="Pretsle" width="200" height="200">Pretsles</p>
+            <p class="box"><img src="./Images/Menu/chocolate ball.jpg" alt="chocolate ball" width="200"
+                    height="200">Chocolate
                 Ball</p>
 
         </Section>
         <!--Second Category-->
         <p class="good">Cakes</p>
         <Section class="Menu">
-            <p class="box"><img src="./Images/Menu/Cakes/Crepe.jpg" width="200" height="200">Crepe</p>
-            <p class="box"><img src="./Images/Menu/Cakes/Brownies.jpg" width="200" height="200">Brownies</p>
-            <p class="box"><img src="./Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> Pancakes
+            <p class="box"><img src="./Images/Menu/Cakes/Crepe.jpg" alt="crepe" width="200" height="200">Crepe</p>
+            <p class="box"><img src="./Images/Menu/Cakes/Brownies.jpg" alt="Brownies" width="200" height="200">Brownies
             </p>
-            <p class="box"><img src="./Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200" height="200">Blueberry
+            <p class="box"><img src="./Images/Menu/Cakes/Pancakes.jpg" alt="Pancakes" width="200" height="200"> Pancakes
+            </p>
+            <p class="box"><img src="./Images/Menu/Cakes/Bluberry Pancakes.jpg" alt="Blueberry Pancakes" width="200"
+                    height="200">Blueberry
                 Pancakes</p>
-            <p class="box"><img src="./Images/Menu/Cakes/SandWhich.jpg" width="200" height="200">SandWhich
+            <p class="box"><img src="./Images/Menu/Cakes/SandWhich.jpg" alt="SandWhich" width="200"
+                    height="200">SandWhich
             </p>
-            <p class="box"><img src="./Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200">Vanilla
+            <p class="box"><img src="./Images/Menu/Cakes/Vanilla Cake.jpg" alt="Vanilla Cake" width="200"
+                    height="200">Vanilla
                 Cake</p>
-            <p class="box"><img src="./Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200">Velvet
+            <p class="box"><img src="./Images/Menu/Cakes/Velvet Cake.jpg" alt="Velvet Cake" width="200"
+                    height="200">Velvet
                 Cake</p>
-            <p class="box"><img src="./Images/Menu/Cakes/sprinkle cake.jpg" width="200" height="200">Sprinkle cake </p>
-            <p class="box"><img src="./Images/Menu/Cakes/Chocolate Cake.jpg" width="200" height="200">Chocolate Cake</p>
+            <p class="box"><img src="./Images/Menu/Cakes/sprinkle cake.jpg" alt="Sprinkle cake" width="200"
+                    height="200">Sprinkle cake </p>
+            <p class="box"><img src="./Images/Menu/Cakes/Chocolate Cake.jpg" alt="Chocolate Cake" width="200"
+                    height="200">Chocolate Cake</p>
         </Section>
         <!--Thrid Category-->
         <p class="good">Cookies</p>
         <Section class="Menu">
-            <p class="box"><img src="./Images/Menu/Cookies/Oreo.jpg" width="200" height="200">Oreo</p>
-            <p class="box"><img src="./Images/Menu/Cookies/Makroon.jpg" width="200" height="200">Makroon</p>
-            <p class="box"><img src="./Images/Menu/Cookies/Salad.jpg" width="200" height="200"> Salad</p>
-            <p class="box"><img src="./Images/Menu/Banana bread.jpg" width="200" height="200">Banana Bread
+            <p class="box"><img src="./Images/Menu/Cookies/Oreo.jpg" alt="Oreo" width="200" height="200">Oreo</p>
+            <p class="box"><img src="./Images/Menu/Cookies/Makroon.jpg" alt="Makroon" width="200" height="200">Makroon
             </p>
-            <p class="box"><img src="./Images/Menu/Cookies/Strawberry Makroon.jpg" width="200" height="200">Strawberry
+            <p class="box"><img src="./Images/Menu/Cookies/Salad.jpg" alt="Salad" width="200" height="200"> Salad</p>
+            <p class="box"><img src="./Images/Menu/Banana bread.jpg" alt="Banana Bread" width="200" height="200">Banana
+                Bread
+            </p>
+            <p class="box"><img src="./Images/Menu/Cookies/Strawberry Makroon.jpg" alt="Strawberry Makroon" width="200"
+                    height="200">Strawberry
                 Makroon</p>
-            <p class="box"><img src="./Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200">Onion
+            <p class="box"><img src="./Images/Menu/Cookies/Onion Rings.jpg" alt="Onion Rings" width="200"
+                    height="200">Onion
                 Rings</p>
-            <p class="box"><img src="./Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200" height="200">Vanilla Biscuit
+            <p class="box"><img src="./Images/Menu/Cookies/Vanilla Biscuit.jpg" alt="Vanilla Biscuit" width="200"
+                    height="200">Vanilla Biscuit
             </p>
-            <p class="box"><img src="./Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200">Biscuit
+            <p class="box"><img src="./Images/Menu/Cookies/Biscuit Jar.jpg" alt="Biscuit Jar" width="200"
+                    height="200">Biscuit
                 Jar</p>
-            <p class="box"><img src="./Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200" height="200">Biscuit Ice
+            <p class="box"><img src="./Images/Menu/Cookies/Biscuit Ice Cream.jpg" alt="Biscuit Ice Cream" width="200"
+                    height="200">Biscuit Ice
                 Cream</p>
 
         </Section>
