--- a/Gallery.html
+++ b/Gallery.html
@@ -44,39 +44,47 @@
             Seasonal specials and holiday-themed treats</p>
     </main>
     <Section class="Menu">
-        <p class="box"><img src="./Images/Menu/fresh-french-croissant-table.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/fresh-french-croissant-table.jpg" alt="French Croissant" width="200"
+                height="200">
         </p>
-        <p class="box"><img src="./Images/Menu/Donut.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/cinnamon rolls.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Tea.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Muffins.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Pie.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Strawberry-pie.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Pretsle.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/chocolate ball.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/Donut.jpg" alt="Donut" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/cinnamon rolls.jpg" alt="Cinnamon Rolls" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Tea.jpg" alt="Tea" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Muffins.jpg" alt="Muffins" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Pie.jpg" alt="Pie" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Strawberry-pie.jpg" alt="Strawberry Pie" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Pretsle.jpg" alt="Pretzle" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/chocolate ball.jpg" alt="Chocolate Ball" width="200" height="200">
         </p>
-        <p class="box"><img src="./Images/Menu/Cakes/Crepe.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cakes/Brownies.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cakes/Pancakes.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cakes/Bluberry Pancakes.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cakes/SandWhich.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cakes/Vanilla Cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cakes/Velvet Cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cakes/sprinkle cake.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cakes/Chocolate Cake.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cookies/Fries.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cookies/Oreo.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Crepe.jpg" alt="Crepe" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Brownies.jpg" alt="Brownies" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Pancakes.jpg" alt="Pancakes" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Bluberry Pancakes.jpg" alt="Blueberry Pancakes" width="200"
+                height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/SandWhich.jpg" alt="SandWhich" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cakes/Vanilla Cake.jpg" alt="Vanilla Cake" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Velvet Cake.jpg" alt="Velvet Cake" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cakes/sprinkle cake.jpg" alt="Sprinkle Cake" width="200" height="200">
+        </p>
+        <p class="box"><img src="./Images/Menu/Cakes/Chocolate Cake.jpg" alt="Chocolate Cake" width="200" height="200">
+        </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Fries.jpg" alt="Fries" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cookies/Oreo.jpg" alt="Oreo" width="200" height="200"> </p>
 
-        <p class="box"><img src="./Images/Menu/Cookies/Makroon.jpg" width="200" height="200"></p>
-        <p class="box"><img src="./Images/Menu/Cookies/Salad.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Banana bread.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Strawberry Makroon.jpg" width="200" height="200">
+        <p class="box"><img src="./Images/Menu/Cookies/Makroon.jpg" alt="Makroon" width="200" height="200"></p>
+        <p class="box"><img src="./Images/Menu/Cookies/Salad.jpg" alt="Salad" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Banana bread.jpg" alt="Banana Bread" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Strawberry Makroon.jpg" alt="Strawberry Makroon" width="200"
+                height="200">
         </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Onion Rings.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Vanilla Biscuit.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Jar.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Ice Cream.jpg" width="200" height="200"> </p>
-        <p class="box"><img src="./Images/Menu/Cookies/Christmas Biscuit.jpg" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Onion Rings.jpg" alt="Onion Rings" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Vanilla Biscuit.jpg" alt="Vanilla Biscuit" width="200"
+                height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Jar.jpg" alt="Biscuit Jar" width="200" height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Biscuit Ice Cream.jpg" alt="Biscuit Ice Cream" width="200"
+                height="200"> </p>
+        <p class="box"><img src="./Images/Menu/Cookies/Christmas Biscuit.jpg" alt="Christmas Biscuit" width="200"
+                height="200"> </p>
     </Section>
 
 
