input text validation added

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,6 @@
     <meta name="Keywords" content="Food,Bakery,Sweets,pastries,Sweetreats," />
     <meta name="description"
         content="Bite into happiness, Sweetreats brings you the finest homemade desserts, candies, and baked delights made with love and the freshest ingredients. Perfect for any occasion — from birthdays to everyday treats!" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="BADIANYA MUTOMBO BLESS" />
 
 </head>
@@ -54,7 +53,7 @@
         Your sweet experience matters — reach out anytime!
     </p>
     <footer>
-        <form method="POST" action="https://formsubmit.co/blessblessing2007@gmail.com">
+        <form method="POST" action="https://formsubmit.co/bombamtheonly@gmail.com">
             <input class="innput" type="text" name="name" placeholder="Enter Your Name" required />
             <input class="innput" type="email" name="email" placeholder="Enter Your Email" required />
             <textarea class="message" name="Message" placeholder="Enter Message" required></textarea>
