--- a/AboutUS.html
+++ b/AboutUS.html
@@ -26,6 +26,9 @@
         <a href="Gallery.html">
             <p>Gallery</p>
         </a>
+        <a href="Contact.html">
+            <p>Contact Us</p>
+        </a>
     </Banner>
     <!--Story-->
     <p class="good">Where it Began?</p>
