Added the contact page button to my homepage

--- a/SweetTreatsHomepage.html
+++ b/SweetTreatsHomepage.html
@@ -71,6 +71,9 @@
         <a href="Gallery.html">
             <button>Gallery</button>
         </a>
+        <a href="Contact.html">
+            <button>Contact</button>
+        </a>
     </navigation>
 
 </body>
