--- a/Menu.html
+++ b/Menu.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="Menu.css">
+    <meta name="Keywords" content="Food,Bakery,Sweets,pastries,Sweetreats," />
+    <meta name="description"
+        content="Bite into happiness, Sweetreats brings you the finest homemade desserts, candies, and baked delights made with love and the freshest ingredients. Perfect for any occasion — from birthdays to everyday treats!" />
+    <meta name="author" content="BADIANYA MUTOMBO BLESS" />
 </head>
 
 <body>
@@ -31,6 +35,9 @@
                 <p>Contact Us</p>
             </a>
         </Banner>
+        <div class="Promo">
+            <p>Get Free Delivery on Orders Over $50!</p>
+        </div>
     </Header>
     <main>
         <p> <span class="good">Menu Page</span></p>
@@ -129,3 +136,7 @@
 
         </Section>
     </footer>
+    <script src="javascript.js"></script>
+</body>
+
+</html>
