--- a/CustomCake.html
+++ b/CustomCake.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Cake</title>
     <link rel="stylesheet" href="CustomCake.css">
+    <meta name="Keywords" content="Food,Bakery,Sweets,pastries,Sweetreats," />
+    <meta name="description"
+        content="Bite into happiness, Sweetreats brings you the finest homemade desserts, candies, and baked delights made with love and the freshest ingredients. Perfect for any occasion — from birthdays to everyday treats!" />
+    <meta name="author" content="BADIANYA MUTOMBO BLESS" />
 </head>
 
 <body>
